# Drone_server

./: connects.json  models.json  pyproject.toml  test.py
app/: index.py  paths.py  vision.py
app/camera/: __init__.py  camera.py
app/classes/: __init__.py  camera.py  visiondata.py
models_cc/: yolov8m.pt.json
