[tool.poetry]
name = "drone-server"
version = "0.1.0"
description = ""
authors = ["Timur Petrunkin <timur046@gmail.com>"]
readme = "README.md"
packages = [{include = "drone_server"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.3"
opencv-python = "^4.8.0.76"
flask-cors = "^4.0.0"
flask-socketio = "^5.3.6"
ultralytics = "^8.0.187"
torch = "^2.0.1"
torchvision = "^0.15.2"
torchaudio = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
